Refactor `Gin` class: streamline code comments, enhance readability, introduce `addMargin` parameter, refine cluster discovery, and improve numerical stability in eigenvalue computation.